--- a/.config/pip/pip.conf
+++ b/.config/pip/pip.conf
@@ -8,7 +8,9 @@ disable-pip-version-check = true
 
 [install]
 use-mirrors = true
+disable-pip-version-check = true
 
 [list]
 format = columns
+disable-pip-version-check = true
 
