--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,10 @@
+# Set the default shell
+set -g default-shell /data/data/com.termux/files/usr/bin/zsh
 # Colors
 # https://github.com/tmux/tmux/issues/1246:
 set -g  default-terminal "tmux-256color"
+# set -g  default-terminal "screen-256color"
+# this line might not be enough for x-term
 # set -g  default-terminal "xterm-256color"
 # set -ga terminal-overrides ",*256col*:TC"
 set -ga terminal-overrides ",*256col*:RGB"
@@ -41,8 +45,9 @@ set -g  focus-events on
 set -g  buffer-limit 20
 
 set -g  history-limit 6000
-set -g  display-time 4000
-set -g  display-panes-time 3000
+set -g  history-file ~/.config/tmux/.tmux_history
+set -g  display-time 3000
+set -g  display-panes-time 2000
 set -g  status-interval 5
 setw -g clock-mode-colour colour4
 
@@ -51,6 +56,8 @@ set -sg escape-time 5 # fix vim esc delay
 set -sg repeat-time 600
 
 ### Key bindings ###
+# set -g extendet-keys on
+
 # Vi keys & copypaste mode
 setw -g mode-keys vi
 # set -g terminal-overrides 'xterm*:smcup@:rmcup@'
@@ -69,23 +76,13 @@ set -g prefix C-a
 bind C-a  send-prefix
 
 # splitting panes with | and -
-bind |    split-window -h
-bind -    split-window -v
-
-# hjkl Vim pane navigation
-bind h    select-pane -L
-bind j    select-pane -D
-bind k    select-pane -U
-bind l    select-pane -R
-
-# Use Vim movement keys(uppercase) for resizing panes.
-bind -r H resize-pane -L 2
-bind -r J resize-pane -D 2
-bind -r K resize-pane -U 2
-bind -r L resize-pane -R 2
+bind |    split-window -h -c "#{pane_current_path}"
+bind -    split-window -v -c "#{pane_current_path}"
+bind _    split-window -fv -c "#{pane_current_path}"
+bind "\\" split-window -fh -c "#{pane_current_path}"
 
 # maximize current pane
-bind + run 'cut -c3- ~/.tmux.conf | sh -s _maximize_pane "#{session_name}" #D'
+bind + resize-pane -Z
 
 # bind -r p previous-window
 bind Tab  previous-window
@@ -93,68 +90,86 @@ bind -r n next-window
 bind a    last-window
 bind C-k  unlink-window -k
 
-bind k    kill-pane
-bind C-q  kill-session
-bind Q    kill-session
+bind C-q  kill-pane
+bind Q    confirm-before -p "kill-session #S? (y/n)" kill-session
+
+# bind D if -F '#{session_many_attached}' \
+#     'confirm-before -p "Detach other clients? (y/n)" "detach -a"' \
+#     'display "Session has only 1 client attached"'
 
 # create session
 bind C-c  new-session
-
-bind C-l  switch-client -l
 
 # find session
 bind C-f  command-prompt -p find-session 'switch-client -t %%'
 
 # trigger copy mode by
 bind Space copy-mode
-bind -T copy-mode-vi Escape send -X cancel
-bind -T copy-mode-vi Space  if -F "#{selection_present}" { send -X clear-selection } { send -X begin-selection }
-bind -T copy-mode-vi Enter  send -X copy-selection-and-cancel
 
 # in copy mode:
+bind -T copy-mode-vi Escape send -X cancel
+bind -T copy-mode-vi Space  if -F "#{selection_present}" { send -X clear-selection } { send -X begin-selection }
+# bind -T copy-mode-vi Enter  send -X copy-selection-and-cancel
+bind -T copy-mode-vi Enter  send -X copy-pipe-and-cancel ' -c "#{pane_current_path}"termux-clipboard-set'
 ## v to vi-like visual selection
 bind -T copy-mode-vi v send -X begin-selection
 ## y to vi-like yank (copy to buffer)
 # bind -T copy-mode-vi y send -X copy-selection-no-clear
-bind -T copy-mode-vi y send -X copy-pipe-no-clear 'termux-clipboard-set'
+# bind -T copy-mode-vi y send -X copy-selection-and-cancel
+# bind -T copy-mode-vi y send -X copy-pipe-no-clear ' -c "#{pane_current_path}"termux-clipboard-set'
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel ' -c "#{pane_current_path}"termux-clipboard-set'
+bind -T copy-mode-vi Y send-keys -X copy-end-of-line
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe ' -c "#{pane_current_path}"termux-clipboard-set' \; send -X clear-selection
 
-# -- buffers --
-# unbind p
-bind b    list-buffers  # list paste buffers
-bind p    paste-buffer  # paste from the top buffer
-bind P    choose-buffer # choose paste buffer
+# -- paste buffers --
+bind b  list-buffers  # list paste buffers
+bind p  paste-buffer  # paste from the top buffer
+bind P  choose-buffer # choose paste buffer
 
 # mouse support for copymode
-bind -n MouseDrag1Pane copy-mode -M
-bind -T copy-mode-vi MouseDrag1Pane    send -X begin-selection
-bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-selection
+# bind -n MouseDrag1Pane copy-mode -M
+# bind -T copy-mode-vi MouseDrag1Pane    send -X begin-selection
+# bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-selection
 
-# Smart pane switching with awareness of vim splits (vim-tmux-navigation)
-# is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-# bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-# bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-# bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-# bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-# bind -n 'C-\' if-shell "$is_vim" "send-keys 'C-\\\\'" "select-pane -l"
+# hjkl Vim pane navigation
+bind -r h   select-pane -L
+bind -r j   select-pane -D
+bind -r k   select-pane -U
+bind -r l   select-pane -R
+
+# Use Vim movement keys(uppercase) for resizing panes.
+bind -r H   resize-pane -L 2
+bind -r J   resize-pane -D 2
+bind -r K   resize-pane -U 2
+bind -r L   resize-pane -R 2
+bind -r M-h resize-pane -L 4
+bind -r M-j resize-pane -D 4
+bind -r M-k resize-pane -U 4
+bind -r M-l resize-pane -R 4
+
+version_pat='s/^tmux[^0-9]*([.0-9]+).*/\1/p'
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+  | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 bind -n 'C-h' if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind -n 'C-j' if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind -n 'C-k' if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind -n 'C-l' if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+# setenv -g tmux_version "$tmux_version"
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
 "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
 if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
 "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
 bind -T copy-mode-vi 'C-h' select-pane -L
 bind -T copy-mode-vi 'C-j' select-pane -D
 bind -T copy-mode-vi 'C-k' select-pane -U
 bind -T copy-mode-vi 'C-l' select-pane -R
 bind -T copy-mode-vi 'C-\' select-pane -l
 
-# clear screen
-bind -n C-l  send-keys 'C-l'
+# clear screen (overrides navigation key binding)
+bind -n 'C-l'  send-keys 'C-l'
 
 # Hide status bar on demand
 bind C-t if -F '#{s/off//:status}' 'set status off' 'set status on'
@@ -177,29 +192,30 @@ bind r source-file /data/data/com.termux/files/home/.config/tmux/tmux.conf \; di
 
 # This tmux statusbar was created by tmuxline.vim
 # on Thu, 19 Aug 2021 (gruvbox-dark)
-set -g status-justify "left"
-set -g status "on"
-set -g status-left-style "none"
-set -g message-command-style "fg=#ebdbb2,bg=#3c3836"
-set -g status-right-style "none"
-set -g pane-active-border-style "fg=#83a598"
-set -g status-style "none,bg=#282828"
-set -g message-style "fg=#ebdbb2,bg=#3c3836"
-set -g pane-border-style "fg=#504945"
-set -g status-right-length "100"
-set -g status-left-length "100"
+set -g  status-justify "left"
+set -g  status "on"
+set -g  status-left-style "none"
+set -g  message-command-style "fg=#ebdbb2,bg=#3c3836"
+set -g  status-right-style "none"
+set -g  pane-active-border-style "fg=#83a598"
+set -g  status-style "none,bg=#282828"
+set -g  message-style "fg=#ebdbb2,bg=#3c3836"
+set -g  pane-border-style "fg=#504945"
+set -g  status-right-length "100"
+set -g  status-left-length "100"
 setw -g window-status-activity-style "fg=#a89984,bg=#282828"
 setw -g window-status-separator ""
 setw -g window-status-style "none,fg=#a89984,bg=#282828"
-set -g status-left "#[fg=#1d2021,bg=#83a598] #S  #P #[fg=#83a598,bg=#282828,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#504945,bg=#282828,nobold,nounderscore,noitalics]#[fg=#a89984,bg=#504945]#{prefix_highlight}#[fg=#a89984,bg=#504945] #{continuum_status} #[fg=#7c6f64,bg=#504945]#[bg=#7c6f64,fg=#282828] %R "
+set -g  status-left "#[fg=#1d2021,bg=#83a598] #S  #P #[fg=#83a598,bg=#282828,nobold,nounderscore,noitalics]"
+set -g  status-right "#[fg=#504945,bg=#282828,nobold,nounderscore,noitalics]#[fg=#a89984,bg=#504945]#{prefix_highlight}#[fg=#a89984,bg=#504945] #{continuum_status} #[fg=#7c6f64,bg=#504945]#[bg=#7c6f64,fg=#282828] %R "
 setw -g window-status-format "#[fg=#282828,bg=#282828,nobold,nounderscore,noitalics]#[default] #I:#W #[fg=#282828,bg=#282828,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=#282828,bg=#504945,nobold,nounderscore,noitalics]#[fg=#ebdbb2,bg=#504945] #I:#W #[fg=#504945,bg=#282828,nobold,nounderscore,noitalics]"
 
 # TMUX_FZF_OPTIONS="-d 50% --preview-window 'down:50%:wrap'"
-TMUX_FZF_OPTIONS="-p -h 65% -w 80% --preview-window=30%,nohidden,wrap"
+# TMUX_FZF_OPTIONS="-p -h 65% -w 85% --preview-window=35%,nohidden,wrap"
+TMUX_FZF_OPTIONS="--height 60% --preview-window=down:35%,nohidden,wrap"
 TMUX_FZF_PREVIEW=1
-TMUX_FZF_ORDER="session|pane|window|command|keybinding|process|clipboard"
+TMUX_FZF_ORDER="session|pane|window|keybinding|clipboard|command|process"
 TMUX_FZF_PANE_FORMAT="[#{window_name}] #{pane_current_command} [#{pane_width}x#{pane_height}] #{?pane_active,[active],[inactive]}"
 TMUX_FZF_WINDOW_FORMAT="[#{window_name}] #{pane_current_command} [#{window_width}x#{window_height}] #{?window_active,[active],[inactive]}"
 TMUX_FZF_SESSION_FORMAT="[#{window_name}] #{pane_current_command} [#{session_windows} Windows] #{?pane_active,[active pane],[inactive pane]}"
@@ -216,7 +232,6 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-# set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 # plugin settings
@@ -225,11 +240,12 @@ set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-processes '"nvim->nvim +SLoad"'
 #Restore all programs (dangerous!):
-# set -g @resurrect-processes ':all:'
-
+set -g @resurrect-processes ':all:'
+set -g @resurrect-hook-pre-restore-pane-processes 'tmux switch-client -n && tmux kill-session -t=0'
 set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
 set -g @continuum-save-interval '10'
+
 set -g @prefix_highlight_fg 'cyan,bold' # default is 'colour231'
 set -g @prefix_highlight_bg '#504945'  # default is 'colour04'
 set -g @prefix_highlight_empty_prompt '...'          # default is '' (empty char)
@@ -246,8 +262,8 @@ set -g @prefix_highlight_sync_mode_attr 'fg=magenta,bold,bg=#504945' # default i
 # set -g @prefix_highlight_output_suffix ' '
 
 # auto install tpm
-if "test ! -d ~/.config/tmux/plugins/tpm" \
-  "run 'git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm &&
-  ~/.config/tmux/plugins/tpm/bin/install_plugins'"
+# if "test ! -d ~/.config/tmux/plugins/tpm" \
+#   "run 'git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm &&
+#   ~/.config/tmux/plugins/tpm/bin/install_plugins'"
 
 run -b '~/.config/tmux/plugins/tpm/tpm'
