--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -16,7 +16,7 @@ extra-keys-style = all
 # extra-keys = [['ESC','/','-','HOME','UP','END','PGUP'], \
 #               ['TAB','CTRL','ALT','LEFT','DOWN','RIGHT','PGDN']]
 
-### Configuration with additional popup keys (swipe up from an extra key)
+### Configuration with additional popup keys (swipe up from an extra key)(Modified!)
 extra-keys = [[ \
    {key: ESC, popup: {macro: "CTRL d", display: "exit"}}, \
    {key: ALT, popup: {macro: "ALT R ENTER", display: "rng→"}}, \
@@ -84,18 +84,21 @@ bell-character = ignore
 # back-key=escape
 
 ### Hide keyboard or leave app (default).
-back-key=back
+# back-key = back
 
 ###############
 # General
 ###############
+
+### Default working directory that will be used when launching the app.
+# default-working-directory = /data/data/com.termux/files/home
 
 ### Cursor style: block is default
 #terminal-cursor-style=underline
 terminal-cursor-style=bar
 
 ### Cursor blinking rate
-terminal-cursor-blink-rate=600
+terminal-cursor-blink-rate = 600
 
 ### Letters might not appear until enter is pressed on Samsung devices
 enforce-char-based-input = true
@@ -104,24 +107,24 @@ enforce-char-based-input = true
 #ctrl-space-workaround = true
 
 ### Disable terminal session change message
-disable-terminal-session-change-toast=true
+disable-terminal-session-change-toast = true
 
 ### Adjust terminal transscript rows:100-50000
-terminal-transcript-rows=6000
+terminal-transcript-rows = 6000
 
 ### (Dis)Allow external apps (false/true)
-allow-external-apps=true
+allow-external-apps = true
 
-# Margin 0 - 100
+### Horizontal/vertical margin 0 - 100
 terminal-margin-horizontal = 0
 
 terminal-margin-vertical = 0
 
-# Open Url's
+### Open Url's
 terminal-onclick-url-open = true
 
-### Default working directory that will be used when launching the app.
-# default-working-directory = /data/data/com.termux/files/home
+### Uncomment to disable hardware keyboar shortcuts.
+# disable-hardware-keyboard-shortcuts =true
 
 ### Uncomment to not show soft keyboard on application start.
 # hide-soft-keyboard-on-startup = true
@@ -133,3 +136,6 @@ terminal-onclick-url-open = true
 ### Uncomment to use volume keys for adjusting volume and not for the
 ### extra keys functionality.
 # volume-keys = volume
+
+### Set this to "true" to force capitalize the text on extra keys row buttons.
+# extra-keys-text-all-caps = false
