Added fzf.sh for bash fzf

--- a/.config/git/config
+++ b/.config/git/config
@@ -42,7 +42,7 @@
     rs         = restore --staged
 
 [init]
-    templatedir = ~/.config/git/template
+    ; templatedir = ~/.config/git/template
 
 [merge]
     tool        = nvim
