--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -37,10 +37,10 @@ set confirm_on_delete multiple
 # Use non-default path for file preview script?
 # ranger ships with scope.sh, a script that calls external programs (see
 # README.md for dependencies) to preview images, archives, etc.
-set preview_script ~/.config/ranger/scope.sh
+# set preview_script ~/.config/ranger/scope.sh
 
 # Use the external preview script or display simple plain text or image previews?
-set use_preview_script true
+# set use_preview_script true
 
 # Automatically count files in the directory, even before entering them?
 set automatically_count_files true
@@ -94,7 +94,7 @@ set show_hidden_bookmarks true
 
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow, solarized, zenburn, monokai, rougarou
-set colorscheme monokai
+# set colorscheme monokai
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
@@ -221,7 +221,7 @@ set nested_ranger_warning true
 # You can set local options that only affect a single directory.
 
 # Examples:
-setlocal path=~/downloads sort mtime
+# setlocal path=~/downloads sort mtime
 
 # ===================================================================
 # == Command Aliases in the Console
@@ -578,3 +578,5 @@ map <C-f> fzf_select
 
 # devicons
 default_linemode devicons
+
+default linemode fileattr
