--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -19,7 +19,7 @@ extra-keys-style = all
 ### Configuration with additional popup keys (swipe up from an extra key)(Modified!)
 extra-keys = [[ \
    {key: ESC, popup: {macro: "CTRL d", display: "exit"}}, \
-   {key: ALT, popup: {macro: "ALT R ENTER", display: "rng➨cd"}}, \
+   {key: ALT, popup: {macro: "ALT V ENTER", display: "vi ➨cd"}}, \
    {key: CTRL, popup: {macro: "CTRL _", display: "hist ↻"}}, \
    {key: LEFT, popup: HOME}, \
    {key: DOWN, popup: PGDN}, \
