--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -58,7 +58,7 @@ extra-keys = [[ \
 #]
 
 # Termux extra keys height
-terminal-toolbar-height = 0.9
+# terminal-toolbar-height = 0.9
 
 ###############
 # Colors/themes
@@ -72,7 +72,7 @@ use-black-ui = true
 ###############
 
 fullscreen = true
-use-fullscreen-workaround = true
+# use-fullscreen-workaround = true
 
 ###############
 # Keyboard shortcuts
@@ -137,7 +137,7 @@ enforce-char-based-input = true
 disable-terminal-session-change-toast = true
 
 ### Adjust terminal transscript rows:100-50000
-terminal-transcript-rows = 6000
+terminal-transcript-rows = 16000
 
 ### (Dis)Allow external apps (false/true)
 allow-external-apps = true
