Updated README and pic

--- a/.termux/termux.properties
+++ b/.termux/termux.properties
@@ -58,7 +58,7 @@ extra-keys = [[ \
 #]
 
 # Termux extra keys height
-# terminal-toolbar-height = 0.9
+terminal-toolbar-height = 1.2
 
 ###############
 # Colors/themes
